# SolveSearchProblem

./: AStar.h  BFS.h  BackTraceSearcher.h  BestFS.h  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  ComparatorsForPriorityQueue.h  DFS.h  FileCacheManager.h  ISearchable.h  Matrix.cpp  Matrix.h  MatrixBuilder.cpp  MatrixBuilder.h  MyClientHandler.h  MyMatrixSearchable.cpp  MyMatrixSearchable.h  MyParallelServer.h  MySearcher.h  MySerialServer.h  MyTestClientHandler.h  Point.h  README.md  Searchable.h  Searcher.h  SearcherByPriorityQueue.h  SearcherByPriorityQueueByComparator.h  SearcherByQueue.h  SearcherByStack.h  SearcherSolverOA.h  Server.h  Solver.h  State.h  StringReverser.h  boot.h  log.txt  main.cpp
